icon margin, fixed spacing

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -124,18 +124,31 @@ ul#itemlist {
 	}
 }
 	.icon {
-		margin:5px;
 		display:inline-block;
 		vertical-align:middle;
-
 	}
 	.name {
-		@include span(4);
+		@include span(6);
+		height:spacing(3);
+		.icon {
+			margin:0 20px;
+		}
+		&:before {
+			content: '';
+			display: inline-block;
+			height: 100%;
+			vertical-align: middle;
+			margin-right: -0.25em;
+		}
 	}
 	.recipe {
-		@include span(last 8);
+		@include span(last 6);
 		color:#666;
 		text-align:right;
+		.icon {
+			margin-left:5px;
+			margin-right:5px;
+		}
 	}
 	.prefab {
 		color:#666;
